--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express-handlebars": "^5.3.4",
     "express-session": "^1.17.3",
     "mysql2": "^2.2.5",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0"
   },
